<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent" >
	
	<FrameLayout
		android:id="@+id/gl_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
	
	<Button 
		android:id="@+id/btn_start_stop"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentLeft="true"
		android:text="@string/btn_stop" />
	
	<LinearLayout
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_alignParentTop="true" >
		
		<Button 
			android:id="@+id/btn_set_push"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_set_push" />
		
		<Button 
			android:id="@+id/btn_reset_push"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/btn_reset_push" />
		
	</LinearLayout>
	
	<Button 
		android:id="@+id/btn_next"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true"
		android:layout_alignParentRight="true"
		android:text="@string/btn_next" />
	
	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_alignParentBottom="true"
		android:gravity="center_horizontal"
		android:orientation="horizontal" >
		
		<LinearLayout
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerHorizontal="true"
			android:layout_alignParentBottom="true"
			android:orientation="horizontal" >
		
			<Button
				android:id="@+id/btn_send10"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/btn_send10" />
		
			<Button
				android:id="@+id/btn_send100"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/btn_send100" />
					
			<Button
				android:id="@+id/btn_send500"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/btn_send500" />
		</LinearLayout>
	</RelativeLayout>
</RelativeLayout>
